fixed the header gap
fixed the gap in the headers

--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ h2 {
 }
 #hero-room { /*room page*/
    background: url(../images/m_rooms1.png) no-repeat;
-   height: 223px;
+   height: 222px;
 }
 
 .book-now {
@@ -275,7 +275,7 @@ h2 {
 }
 
 #pool-container {
-   margin-top: 154px;
+   margin-top: 155px;
 }
 
 #hero-gift {
@@ -289,7 +289,7 @@ h2 {
 
 #hero-sports {
    background: url(../images/m_gym_sports_centre.png);
-   height: 223px;
+   height: 222px;
 }
 
 #sports-container {
@@ -298,7 +298,7 @@ h2 {
 
 #hero-gallery {
    background: url(../images/m_artist_gallery.png);
-   height: 223px;
+   height: 222px;
 }
 
 #gallery-container {
@@ -307,7 +307,7 @@ h2 {
 
 #hero-spa-policies {
    background: url(../images/m_spa_policies_information.png);
-   height: 223px;
+   height: 222px;
 }
 
 #spa-policies-container {
@@ -334,7 +334,7 @@ h2 {
 
 #hero-spa-products {
    background: url(../images/Rectangle\ 89.png);
-   height: 120px;
+   height: 119px;
 }
 
 #spa-products-container {
@@ -347,5 +347,5 @@ h2 {
 }
 
 #heading-container {
-   margin-top: 154px;
+   margin-top: 155px;
 }
